delete homepage js and fix spacing

--- a/homepage.css
+++ b/homepage.css
@@ -1,16 +1,12 @@
 body {
-
- background-color: #cccccc;
+    background-color: #cccccc;
 }
-
 
 .home_div {
     background-color: rgba(255, 255, 255, 0.644);
     border-radius: 15px;
     padding: 20px 30px;
     margin-top: 60px;
-    /* margin-left: 5px;
-    margin-right: 5px; */
     font-size: 20px;
 }
 
@@ -26,8 +22,9 @@ body {
 .home_div a:hover {
     color: var(--coral);
 }
-.headerContainer{
-    background-image: linear-gradient(to bottom, rgba(56, 55, 55, 0.7), rgba(56, 55, 55,  0.7)), url("images/pilatespic.png");
+
+.headerContainer {
+    background-image: linear-gradient(to bottom, rgba(56, 55, 55, 0.7), rgba(56, 55, 55, 0.7)), url("images/pilatespic.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,6 +34,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .header {
 
     font-size: 150px;
@@ -47,13 +45,17 @@ body {
     -ms-animation: fadeIn linear 7s;
     color: white;
     text-align: center;
-    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
     margin: 70px;
-    
-  }
-  
-  @keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
+
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
